--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="description" content="">
+    <meta name="description" content="Portfólio de desenvolvimento front-end de Windisley Lima. Aqui você encontra projetos, habilidades e soluções inovadoras em web design, e-commerce e mais, tudo criado com as tecnologias mais modernas como React, JavaScript, e Tailwind CSS.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Windisley Dev </title>
   </head>
