--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="description" content="Portfólio de desenvolvimento front-end de Windisley Lima. Aqui você encontra projetos, habilidades e soluções inovadoras em web design, e-commerce e mais, tudo criado com as tecnologias mais modernas como React, JavaScript, e Tailwind CSS.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Windisley Dev </title>
+    <title>Windisley Dev</title>
   </head>
   <body>
     <div id="root"></div>
